# galgame-notes-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start-tauri.bat  start.bat
app/: capture.py  chat.py  config.py  indexer.py  llm_client.py  memory.py  ocr.py  ocr_ai.py  ocr_onnx.py  ocr_rapid.py  ocr_winsdk.py  organizer.py  parser.py  region_picker.py  server.py  tauri_server.py  textractor.py  winutil.py
dev/: bridge_test.py  e2e_check.py  mock_textractor.py
docs/: design.md  textractor-setup.md
docs/plans/: 2026-06-28-v1-mvp.md  2026-06-28-v2-textractor-channel.md
samples/: sample_lines.txt
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
tests/: conftest.py  test_ai_ocr.py  test_chat.py  test_config.py  test_dedup.py  test_llm_client.py  test_memory.py  test_onnx_ocr.py  test_organizer.py  test_rapid_ocr.py  test_textractor.py
web/static/: app.js  style.css
web/templates/: index.html
