[project]
name = "galgame-notes-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0",
  "flask-socketio>=5.3",
  "openai>=1.30",
  "python-dotenv>=1.0",
  "websocket-client>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "websockets>=12.0"]
ocr = [
  "mss>=9.0",
  "onnxruntime>=1.7",
  "opencv-python>=4.5",
  "numpy>=1.19",
  "winrt-runtime>=3.0; sys_platform == 'win32'",
  "winrt-Windows.Foundation>=3.0; sys_platform == 'win32'",
  "winrt-Windows.Foundation.Collections>=3.0; sys_platform == 'win32'",
  "winrt-Windows.Media.Ocr>=3.0; sys_platform == 'win32'",
  "winrt-Windows.Globalization>=3.0; sys_platform == 'win32'",
  "winrt-Windows.Graphics.Imaging>=3.0; sys_platform == 'win32'",
  "winrt-Windows.Storage.Streams>=3.0; sys_platform == 'win32'",
  "Pillow>=10.0",
  "rapidocr-onnxruntime>=1.2",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
